--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,12 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.3'
+
+    // using the local lib project
     compile project(':lib')
+
+    // could instead use the lib from the Maven repository
+//    compile 'com.github.brnunes:swipeablerecyclerview:1.0.0'
 }
